# pygwire

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
contributing/: index.html
docs/: contributing.md  getting-started.md  index.md  quickstart.md
docs/examples/: auth-proxy.md
docs/guide/: codec.md  connection.md  messages.md  state-machine.md
docs/reference/: codec.md  connection.md  constants.md  core.md  framing.md  messages.md  state-machine.md
docs/reference/messages/: auth.md  copy.md  errors.md  extended-query.md  index.md  misc.md  simple-query.md  startup.md
examples/: auth_proxy.py  client_md5.py
examples/auth-proxy/: index.html
examples/docs/: README.md  codec_basic_usage.py  codec_phase_aware.py  codec_streaming.py  connection_client_example.py  connection_overview_with.py  connection_overview_without.py  connection_phase_tracking.py  connection_subclass_async.py  connection_subclass_sync.py  framing_lookup.py  index_connection.py  index_lowlevel.py  index_subclass.py  quickstart_connection.py  quickstart_decode_backend.py  quickstart_decode_frontend.py  quickstart_encode.py  quickstart_state_machine.py  quickstart_verify.py  state_machine_basic.py  state_machine_error.py  state_machine_pipelining.py  state_machine_proxy.py  test_all_examples.sh
getting-started/: index.html
guide/codec/: index.html
guide/connection/: index.html
guide/messages/: index.html
guide/state-machine/: index.html
quickstart/: index.html
reference/codec/: index.html
reference/connection/: index.html
reference/constants/: index.html
reference/core/: index.html
reference/messages/: index.html
reference/messages/auth/: index.html
reference/messages/copy/: index.html
reference/state-machine/: index.html
search/: search_index.json
src/pygwire/: __init__.py  codec.py  connection.py  constants.py  exceptions.py  framing.py  state_machine.py
tests/: smoke_test.py
tests/infrastructure/: docker-compose.yml
tests/integration/: test_codec_integration.py  test_framing_strategies.py  test_malformed_payloads.py
tests/proxy_functional/: README.md  __init__.py  conftest.py  test_authentication.py  test_copy_protocol.py  test_error_recovery.py  test_extended_query.py  test_notifications.py  test_simple_query.py  test_transactions.py
tests/unit/: test_codec.py  test_connection.py  test_framing.py  test_malformed_payloads.py  test_messages_auth.py  test_messages_other.py  test_messages_simple_query.py  test_messages_startup.py  test_state_machine.py
(+20 files in other folders)
